# diags.log.c

./: CMakeLists.txt  log.c  log.h
log/: diags.h
